// $Id: CHANGELOG.txt,v 1.1.2.21 2008/09/16 02:52:01 boombatower Exp $

SimpleTest 6.x-2.4, xxxx-xx-xx (development version)
- Backports:
   * #305077: Rework simpletest backend.

SimpleTest 6.x-2.3, 2008-09-15
------------------------------
- Backports:
    * #297869: Add xpath method to SimpleTest.
    * #297894: Add assertLink and assertNoLink to SimpleTest.
    * #298137: drupalCreateContentType() should reset node permissions.
    * #268148: Don't verify SSL certificates.
    * #293099: Clarify form documentation and error handling.
    * #296027: {simpletest} indexes come with wrong array expression.
    * #299461: assertEqual() does not work with arrays.
    * #246261: Simpletest-light doesn't handle selects with <optgroup>'s correctly.
- Changes:
    * #297890: Add notice to INSTALL.txt instructing users on Windows to
               encode settings file with the UNIX standard.
    * #302606: Usability: improve installation error message.

SimpleTest 6.x-2.2, 2008-08-15
------------------------------
- Bugs:
    * #292062: fixed role creation permission check for 6.x style.
- Backports:
    * #290316: test_id field name corrected.
    * #293500: change message field to type text.
    * #268063: added instruction in INSTALL.txt about hidden property.
    * #291750: remove results after displayed.
- Changes:
    * #295001: clarified INSTALL.txt and installation requirements message.
    * Updated README.txt with issue information.

SimpleTest 6.x-2.1, 2008-08-05
------------------------------
- Complete backport of Drupal 7.x SimpleTest module.